--- a/results_leaf_lifespan.rmd
+++ b/results_leaf_lifespan.rmd
@@ -7,7 +7,8 @@ source("scripts/summary_dataframes.R")
 
 #Leaf lifespan data
 General results:
-  
+  - Leaf lifespan increases from seedlings (1.4 yrs) to saplings (2.4 years) to adults (>4 years), but there are no differences between the different adult populations
+  - Species differ en
 
 
 #Generic functions for most plotting below
@@ -37,7 +38,7 @@ summarise_all_fits <- function(x) {
 #First issue is how to calculate leaf lifespan
 A plot of leaf lifespan calculated using birth of leaves, death of leaves, and the mean of the two shows they are poorly correlated, even when the youngest plants are omitted
 
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE, message=FALSE}
 yvar <- "LL_birth"
 xvar <- "LL_death"
 data <- filter(SummaryInd, age>2, LL_birth<10&LL_death<10)
@@ -54,7 +55,7 @@ xvar <- "LL_bd"
 data <- filter(SummaryInd, age>2, LL_birth<10&LL_death<10)
 
 plot_yvar_vs_xvar(data, yvar, xvar,
-                  xlab=xvar, ylab=yvar, ,col=col.spp[as.factor(data$species)])
+                  xlab=xvar, ylab=yvar,col=col.spp[as.factor(data$species)])
 legend("bottomright",legend=labels.spp,pch=16,col=col.spp,bty="n",cex=.8)
 mod <- lm(LL_birth~LL_bd,data=data)
 summary(mod)
@@ -73,7 +74,7 @@ summary(mod)
 #Starting with the basics: Are leaf lifespan and LMA correlated?
 Plotting species*site means
 Figures shown using all three measures of leaf lifespan
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 yvar <- "LMA_mean"
 xvar <- "LL_death_mean"
 data <- filter(SummarySppAge)
@@ -107,7 +108,7 @@ summary(mod)
 
 #Same plots as above, but omitting HATE, which has much higher LMA than any other species due to its round "leaves"
 Using leaf deaths gives the poorest fit...
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 yvar <- "LMA_mean"
 xvar <- "LL_death_mean"
 data <- filter(SummarySppAge, species!="HATE")
@@ -158,7 +159,7 @@ Using leaf deaths for the following plots and removing the youngest individuals
 Age is log transformed.
 BAER, HEPU, PUTU show a significant DECREASE in leaf lifespan with increasing age (p<0.05)
 LEES, PEPU shows a marginally significant DECREASE in accessory costs with increasing age (0.05<p<0.10)
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 yvar <- "LL_death"
 xvar <- "age"
 data <- filter(SummaryInd,LL_death<10&age>2)
@@ -188,7 +189,7 @@ BAER, COER, EPMI show a significant DECREASE in leaf lifespan with increasing si
 PEPU, PHPH show a marginally significant DECREASE in accessory costs with increasing size (0.05<p<0.10)
 
 If leaf lifespan based on leaf births is used instead, there are a number of significant INCREASES in leaf lifespan with increasing size
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 yvar <- "LL_death"
 xvar <- "FinalWeight"
 data <- filter(SummaryInd,LL_death<8&age>2)
@@ -215,7 +216,7 @@ for(spp in names(data)) {
 #Higher growth rates correlated with lower leaf lifespan in a handful of species
 BAER, EPMI, PEPU show declining LL and COER shows marginally significant decline with increasing absolute growth investment.
 
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 yvar <- "LL_death"
 xvar <- "GrowthInv"
 data <- filter(SummaryInd,LL_death<8&age>2)
@@ -240,7 +241,7 @@ for(spp in names(data)) {
 ```
 
 #Putting age and speices together in a model shows, not surprisingly, that both age and species contribute to the variation and that species matters much more.
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 plot(LL_death ~ age, data=SummaryInd, cex.axis=.8, las=1, xlim=c(1,35), ylim=c(.95,10), log="xy", pch=16,col=col.spp[as.factor(species)])
 legend(14,8,legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
@@ -255,7 +256,7 @@ However for LL_death most species show a positive correlation between number of 
 
 This trend worries me - is leaf count very variable across years?
 
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 plot(LL_death ~ lvs_end_total, data=subset(SummaryInd), log="xy",col=col.spp[as.factor(species)],pch=16)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 
@@ -305,7 +306,7 @@ for(spp in names(data)) {
 older plants have marginally higher LMA, but the effect mostly disappears when the youngest plants are excluded
 there is enormous variation in LMA across species
 
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 mod <- lm(LMA_mean~species*age, SummarySppAge)
 summary(mod)
 anova(mod)
@@ -324,7 +325,7 @@ legend(12,.04,col=col.spp, pch=16,legend=labels.spp,cex=.8,bty="n")
 There is a stronger trend with respect to weight, even after the effect of species is taken into account
 
 The interactions terms weren't significant and were removed from the model
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 mod <- lm(LMA_mean~species+log(FinalWeight_mean), SummarySppAge)
 summary(mod)
 anova(mod)
@@ -343,7 +344,7 @@ legend("topleft",col=col.age, pch=16,legend=labels.age,cex=.8,bty="n")
 
 
 
-```{r, echo=FALSE,results='hide', message=FALSE}
+```{r, echo=FALSE,message=FALSE}
 
 
 ```
